<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:id="@+id/iv_backdrop_movie"
        android:alpha="0.2"
        tools:src="@tools:sample/avatars"
        />
    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_gradientoval"/>
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/appbar_detailmovie"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <ImageView
                android:id="@+id/ivdetail_back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_alignParentStart="true"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:src="@drawable/ic_back_arrow" />
            <ImageView
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:layout_margin="10dp"
                android:layout_alignParentEnd="true"
                android:id="@+id/iv_detailmovie_isfavorite"
                android:src="@drawable/ic_favorite_off"/>

            <TextView

                style="@style/TextAppearance.AppCompat.Large"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="Detail Movie"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </RelativeLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@+id/appbar_detailmovie">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/card_imagebg"
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:layout_marginHorizontal="90dp"
                android:elevation="10dp"
                app:cardCornerRadius="30dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="50dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"
                    android:id="@+id/iv_detailmovie_poster"
                    tools:src="@tools:sample/avatars" />
                <me.zhanghai.android.materialratingbar.MaterialRatingBar
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:id="@+id/rt_detailmovie_rate"
                    style="@style/Widget.AppCompat.RatingBar.Small"
                    app:layout_constraintBottom_toBottomOf="@+id/itemmovie_poster"
                    android:layout_marginStart="20dp"
                    app:mrb_progressTint="@color/yelow"
                    android:layout_marginEnd="20dp"
                    android:layout_gravity="bottom"
                    tools:rating="2.5"/>
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="20dp"
                android:id="@+id/tv_detailmovie_title"
                app:layout_constraintTop_toBottomOf="@+id/card_imagebg"
                style="@style/TextAppearance.AppCompat.Large"
                tools:text="Wolverine"
                />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ly_release_date"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailmovie_title"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="Release Date: "/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_detailmovie_release"
                    tools:text="00/00/0000"/>
            </LinearLayout>
            <TextView
                android:id="@+id/tv_detailmovie_overviewtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:layout_marginStart="20dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ly_release_date"
                android:text="Overview" />
            <TextView
                android:id="@+id/tv_detailmovie_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLines="4"
                android:padding="20dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailmovie_overviewtitle"
                tools:text="@tools:sample/lorem/random" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Trailers"
                android:id="@+id/tv_detailmovie_trailerstitle"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailmovie_overview"

                android:layout_marginHorizontal="20dp"
                android:textStyle="bold"/>
            <androidx.recyclerview.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="300dp"
                android:id="@+id/rv_detailmovie_trailers"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_detailmovie_trailerstitle"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                tools:listitem="@layout/item_trailer"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <ProgressBar
        android:id="@+id/pgdetailmovie"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/iv_backdrop_movie"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/error_data"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" >
        <ImageView
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/ic_error"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/text_error"
            android:textColor="@color/gray"
            android:text="Something wrong"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>