...
        app:layout_constraintTop_toTopOf="parent" />


    <com.omadahealth.github.swipyrefreshlayout.library.SwipyRefreshLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/refresh_movies"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@+id/tv_discoveryf_title"
        app:layout_constraintBottom_toBottomOf="parent"
        app:srl_direction="bottom">
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/rv_discovery_movies"
            android:orientation="vertical"
            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            app:spanCount="2"
            tools:listitem="@layout/item_movie_seemore"

            />
...
